[package]
name = "nsync_core"
description = "NeuralSync Distributed Training Engine — Federated gradient computation backend"
authors = ["NeuralSync Research Lab"]
repository = "https://github.com/neuralsync/nsync-core"
homepage = "https://neuralsync.dev"
readme = "README.md"
license = "BSD-3-Clause"
version = "2.0.3"
edition = "2021"
build = "build.rs"

[lib]
name = "nsync_core"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "engine"
path = "src/bin/engine.rs"

[dependencies]
libc = "0.2.121"
bitflags = "1.3.2"
thiserror = "1.0.50"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
# Engine dependencies
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
colored = "2"
futures-util = { version = "0.3", features = ["sink"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
url = "2"
hex = "0.4"
num_cpus = "1"
lazy_static = "1"
arc-swap = "1"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
hex = "0.4.3"
quickcheck = "1"

[build-dependencies]
cmake = "0.1"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 1
