[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nsync-core"
version = "2.0.3"
description = "NeuralSync Distributed Training Engine"
requires-python = ">=3.8"

[tool.maturin]
features = ["python"]
bindings = "pyo3"
# manylinux = "2014" → compatible with glibc 2.17+ (CentOS 7+)
# Covers: Ubuntu 16.04+, Debian 9+, RHEL 7+, Amazon Linux 2+, etc.
manylinux = "auto"
strip = true
